--- a/src/main/resources/fxml/CreateSection.fxml
+++ b/src/main/resources/fxml/CreateSection.fxml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -21,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="405.0" prefWidth="626.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.CreateSectionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="405.0" prefWidth="626.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.CreateSectionController">
    <children>
       <VBox alignment="CENTER" layoutX="121.0" layoutY="46.583984375" prefHeight="405.0" prefWidth="626.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -43,15 +35,11 @@
             <Group layoutX="104.0" layoutY="207.0">
                <children>
                   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="33.0" layoutX="-2.0" layoutY="18.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="400.0" />
-                  <RadioButton layoutX="12.0" layoutY="26.0" mnemonicParsing="false" selected="true" styleClass="radiobutton-small" text="Monday">
-                     <toggleGroup>
-                        <ToggleGroup fx:id="WeekDay" />
-                     </toggleGroup>
-                  </RadioButton>
-                  <RadioButton layoutX="90.0" layoutY="27.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Tuesday" toggleGroup="$WeekDay" />
-                  <RadioButton layoutX="164.0" layoutY="27.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Wednesday" toggleGroup="$WeekDay" />
-                  <RadioButton layoutX="255.0" layoutY="27.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Thursday" toggleGroup="$WeekDay" />
-                  <RadioButton layoutX="332.0" layoutY="26.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Friday" toggleGroup="$WeekDay" />
+                  <RadioButton fx:id="mondayToggle" layoutX="12.0" layoutY="26.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Monday" />
+                  <RadioButton fx:id="tuesdayToggle" layoutX="90.0" layoutY="27.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Tuesday" />
+                  <RadioButton fx:id="wednesdayToggle" layoutX="164.0" layoutY="27.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Wednesday" />
+                  <RadioButton fx:id="thursdayToggle" layoutX="255.0" layoutY="27.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Thursday" />
+                  <RadioButton fx:id="fridayToggle" layoutX="332.0" layoutY="26.0" mnemonicParsing="false" styleClass="radiobutton-small" text="Friday" />
                   <Label text="Select Day(s) of the Week" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
@@ -68,7 +56,7 @@
                   <Insets bottom="20.0" />
                </VBox.margin>
             </HBox>
-            <Button fx:id="createButton" layoutX="218.0" layoutY="339.0" onAction="#CreateSection" mnemonicParsing="false" prefHeight="27.0" prefWidth="139.0" text="Create Section" AnchorPane.leftAnchor="218.0" AnchorPane.rightAnchor="243.0" AnchorPane.topAnchor="339.0" />
+            <Button fx:id="createButton" layoutX="218.0" layoutY="339.0" mnemonicParsing="false" onMouseClicked="#CreateSection" prefHeight="27.0" prefWidth="139.0" text="Create Section" AnchorPane.leftAnchor="218.0" AnchorPane.rightAnchor="243.0" AnchorPane.topAnchor="339.0" />
       
          </children>
       </VBox>
