--- a/src/main/resources/fxml/Scheduler.fxml
+++ b/src/main/resources/fxml/Scheduler.fxml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import java.lang.Double?>
 <?import java.lang.String?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -28,7 +23,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="725.0" prefWidth="1200.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="725.0" prefWidth="1200.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
    <children>
       <MenuBar prefHeight="29.0" prefWidth="1200.0" styleClass="menu">
         <menus>
@@ -54,8 +49,8 @@
             <items>
               <MenuItem fx:id="viewTimePrefMI" mnemonicParsing="false" styleClass="menu-item" text="View Time Preferences..." />
                   <MenuItem fx:id="viewCohortDataMI" mnemonicParsing="false" styleClass="menu-item" text="View Cohort Data..." />
-                  <MenuItem fx:id="ListViewMI" mnemonicParsing="false" styleClass="menu-item" text="List View" />
-                  <MenuItem fx:id="CalViewMI" mnemonicParsing="false" styleClass="menu-item" text="Calendar View" />
+                  <MenuItem fx:id="ListViewMI" mnemonicParsing="false" onAction="#onListView" styleClass="menu-item" text="List View" />
+                  <MenuItem fx:id="CalViewMI" mnemonicParsing="false" onAction="#onCalendarView" styleClass="menu-item" text="Calendar View" />
             </items>
           </Menu>
             <Menu fx:id="helpMenu" mnemonicParsing="false" styleClass="menu" text="Help">
@@ -86,17 +81,26 @@
                      <panes>
                         <TitledPane animated="false" prefHeight="568.0" prefWidth="186.0" text="Courses">
                            <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <ListView fx:id="courseListView" layoutX="1.0" prefHeight="553.0" prefWidth="206.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                 </children></AnchorPane>
                            </content>
                         </TitledPane>
                         <TitledPane animated="false" text="Faculty">
                            <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <ListView fx:id="teachersListView" layoutX="3.0" layoutY="35.0" prefHeight="553.0" prefWidth="206.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                 </children></AnchorPane>
                            </content>
                         </TitledPane>
                         <TitledPane animated="false" prefHeight="582.0" prefWidth="208.0" text="Rooms">
                            <content>
-                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <ListView fx:id="roomsListView" layoutX="3.0" layoutY="95.0" prefHeight="553.0" prefWidth="206.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                 </children></AnchorPane>
                            </content>
                         </TitledPane>
                      </panes>
@@ -134,9 +138,7 @@
                               <Font name="Avenir Roman" size="13.0" />
                            </font>
                         </Text>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="8.0" layoutX="280.0" layoutY="-289.0" onMouseClicked="#onAddSection" rotate="91.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="28.0" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="8.0" layoutX="280.0" layoutY="-290.0" onMouseClicked="#onAddSection" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="28.0" />
-                        <TextField fx:id="filterField" layoutX="-352.0" layoutY="-389.0" promptText="Filter by..." />
+                        <TextField fx:id="filterField" layoutX="-352.0" layoutY="-384.0" />
                      </children>
                   </Group>
                   <Group fx:id="calendarGroup" layoutX="-256.0" layoutY="-43.0" visible="false">
@@ -221,7 +223,7 @@
       <Group layoutX="1039.0" layoutY="27.0">
          <children>
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#79879a" height="34.0" layoutX="-100.0" layoutY="9.0" onMouseClicked="#onExpandFeedback" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="154.0" />
-            <Text fx:id="closeFeedback" fill="WHITE" layoutX="-97.0" layoutY="32.0" onMouseClicked="#launchStudentFeedback" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Feedback" textAlignment="CENTER" wrappingWidth="145.21299743652344">
+            <Text fx:id="closeFeedback" fill="WHITE" layoutX="-97.0" layoutY="32.0" onMouseClicked="#onExpandFeedback" strokeType="OUTSIDE" strokeWidth="0.0" text="Close Feedback" textAlignment="CENTER" wrappingWidth="145.21299743652344">
                <font>
                   <Font name="Avenir Roman" size="17.0" />
                </font>
